[package]
name = "inger"
version = "0.0.0"
build = "build.rs"

[lib]
crate-type = ["dylib"]
harness = false

[dependencies]
libc = "*"

[dependencies.gotcha]
path = "external/libgotcha"

[dependencies.signal]
path = "internal/libsignal"
features = ["libgotcha"]

[dependencies.timetravel]
path = "external/libtimetravel"
features = ["libgotcha"]

[[bench]]
name = "inger"
harness = false

[[bench]]
name = "baseline"
harness = false

[build-dependencies]
bindgen = "*"

[dev-dependencies]
bencher = "*"

[workspace]
exclude =  ["external/libgotcha/examples/cargo"]
