[package]
name = "inger"
version = "0.0.0"

[lib]
crate-type = ["dylib"]
harness = false

[features]
notls = []

[dependencies]
libc = "*"

[dependencies.gotcha]
path = "external/libgotcha"

[dependencies.signal]
path = "internal/libsignal"
features = ["libgotcha"]

[dependencies.timetravel]
path = "external/libtimetravel"
features = ["libgotcha"]

[[bench]]
name = "inger"
harness = false

[[bench]]
name = "baseline"
harness = false

[dev-dependencies]
bencher = "*"

[workspace]
exclude =  ["external/libgotcha/examples/cargo"]
